setup: Use the NetInfo address if given
If the user specifies the afs_server_netinfo to set the NetInfo file,
then use that address in the server's CellServDB as well.  The NetInfo
can have multiple addresses, but for this test setup, just support a
single address to keep this simple.

For example, you can create a dummy-interface with a persisent address
and use that address for the test cell with the afs_server_netinfo
variable.

--- a/setup/local_openafs_sandbox.yml
+++ b/setup/local_openafs_sandbox.yml
@@ -73,7 +73,7 @@
       cell: "{{ afs_cell }}"
       desc: Example cell for testing
       hosts:
-        - ip: "{{ ansible_default_ipv4.address }}"
+        - ip: "{{ afs_server_netinfo | d(ansible_default_ipv4.address) }}"
           name: "{{ ansible_hostname }}"
           clone: false
 
