Tox: Added robotframework-openafslibrary dependency

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,7 @@ allowlist_externals=
 deps =
     robotframework
     robotframework-robocop
+    robotframework-openafslibrary
 commands =
     mkdir -p output
     rm -rf output/* robocop.txt
