--- a/tox.ini
+++ b/tox.ini
@@ -25,5 +25,5 @@ deps =
 commands =
     mkdir -p output
     rm -rf output/* robocop.txt
-    robocop check --ignore LEN28 --ignore LEN06 --ignore LEN04 suites/status/check_client.robot
+    robocop check --ignore LEN28 --ignore LEN06 --ignore LEN04 suites/
     robot -b debug.txt -d output suites/status/check_client.robot
