Robot command runs all tests in suites folder

--- a/tox.ini
+++ b/tox.ini
@@ -26,4 +26,4 @@ commands =
     mkdir -p output
     rm -rf output/* robocop.txt
     robocop check --ignore LEN28 --ignore LEN06 --ignore LEN04 suites/
-    robot -b debug.txt -d output suites/status/check_client.robot
+    robot -b debug.txt -d output suites/
